Fix digest word overflow

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -19,6 +19,11 @@
   text-align: center;
 }
 
+.digest {
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+}
+
 /* paper-dashboard */
 
 body {
